// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon after children 1`] = `
.c2 {
  display: inline-block;
  position: relative;
  color: #26A826;
  background-color: transparent;
}

.c2:hover {
  color: #1E861E;
  background-color: transparent;
}

.c2::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e928";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c3 .c1 {
  color: #255bc7;
}

.c3:active .c1 {
  color: #255bc7;
}

.c3:hover .c1 {
  color: #ffffff;
}

.c3:focus .c1 {
  color: #ffffff;
}

.c3 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 18px;
}

.c3 .c1 svg {
  margin-top: 0;
}

.c4 .c1 {
  color: #255bc7;
}

.c4:active .c1 {
  color: #255bc7;
}

.c4:hover .c1 {
  color: #ffffff;
}

.c4:focus .c1 {
  color: #ffffff;
}

.c4 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 8px;
}

.c4 .c1 svg {
  margin-top: 0;
}

.c5:hover .c1 {
  color: #FFFFFF;
}

.c5 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  height: 16px;
}

.c5 .c1 svg {
  margin-top: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 16px;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c0:focus {
  outline: solid 3px #FFB500;
}

.c0:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c0:hover .c1 {
  color: #FFFFFF;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 16px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
  data-component="button"
  disabled={false}
  role="button"
  size="medium"
  type="button"
>
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
  <span
    className="c1 c2"
    data-component="icon"
    data-element="filter"
    disabled={false}
    fontSize="small"
    type="filter"
  />
</button>
`;

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon before children 1`] = `
.c2 {
  display: inline-block;
  position: relative;
  color: #26A826;
  background-color: transparent;
}

.c2:hover {
  color: #1E861E;
  background-color: transparent;
}

.c2::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e928";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c3 .c1 {
  color: #255bc7;
}

.c3:active .c1 {
  color: #255bc7;
}

.c3:hover .c1 {
  color: #ffffff;
}

.c3:focus .c1 {
  color: #ffffff;
}

.c3 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 18px;
}

.c3 .c1 svg {
  margin-top: 0;
}

.c4 .c1 {
  color: #255bc7;
}

.c4:active .c1 {
  color: #255bc7;
}

.c4:hover .c1 {
  color: #ffffff;
}

.c4:focus .c1 {
  color: #ffffff;
}

.c4 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 8px;
}

.c4 .c1 svg {
  margin-top: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 16px;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c0:focus {
  outline: solid 3px #FFB500;
}

.c0:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c0:hover .c1 {
  color: #FFFFFF;
}

.c0 .c1 {
  margin-left: 0px;
  margin-right: 8px;
  height: 16px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
  data-component="button"
  disabled={false}
  role="button"
  size="medium"
  type="button"
>
  <span
    className="c1 c2"
    data-component="icon"
    data-element="filter"
    disabled={false}
    fontSize="small"
    type="filter"
  />
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "blue" matches the snapshot when default props are passed 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c0 .c1 {
  color: #255bc7;
}

.c0:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c0:active .c1 {
  color: #255bc7;
}

.c0:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:hover .c1 {
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:focus .c1 {
  color: #ffffff;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 8px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "grey" matches the snapshot when default props are passed 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c0 .c1 {
  color: #255bc7;
}

.c0:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c0:active .c1 {
  color: #255bc7;
}

.c0:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:hover .c1 {
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:focus .c1 {
  color: #ffffff;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 8px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "magenta" matches the snapshot when default props are passed 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c0 .c1 {
  color: #255bc7;
}

.c0:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c0:active .c1 {
  color: #255bc7;
}

.c0:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:hover .c1 {
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:focus .c1 {
  color: #ffffff;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 8px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "magenta-dull" matches the snapshot when default props are passed 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c0 .c1 {
  color: #255bc7;
}

.c0:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c0:active .c1 {
  color: #255bc7;
}

.c0:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:hover .c1 {
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:focus .c1 {
  color: #ffffff;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 8px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "red" matches the snapshot when default props are passed 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c0 .c1 {
  color: #255bc7;
}

.c0:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c0:active .c1 {
  color: #255bc7;
}

.c0:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:hover .c1 {
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:focus .c1 {
  color: #ffffff;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 8px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "white" matches the snapshot when default props are passed 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c0 .c1 {
  color: #255bc7;
}

.c0:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c0:active .c1 {
  color: #255bc7;
}

.c0:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:hover .c1 {
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:focus .c1 {
  color: #ffffff;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 8px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "blue" matches the snapshot with the default props 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 43px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c0 .c1 {
  color: #255bc7;
}

.c0:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c0:active .c1 {
  color: #255bc7;
}

.c0:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:hover .c1 {
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:focus .c1 {
  color: #ffffff;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 18px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
  size="large"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "grey" matches the snapshot with the default props 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 43px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c0 .c1 {
  color: #255bc7;
}

.c0:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c0:active .c1 {
  color: #255bc7;
}

.c0:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:hover .c1 {
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:focus .c1 {
  color: #ffffff;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 18px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
  size="large"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "magenta" matches the snapshot with the default props 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 43px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c0 .c1 {
  color: #255bc7;
}

.c0:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c0:active .c1 {
  color: #255bc7;
}

.c0:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:hover .c1 {
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:focus .c1 {
  color: #ffffff;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 18px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
  size="large"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "magenta-dull" matches the snapshot with the default props 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 43px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c0 .c1 {
  color: #255bc7;
}

.c0:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c0:active .c1 {
  color: #255bc7;
}

.c0:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:hover .c1 {
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:focus .c1 {
  color: #ffffff;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 18px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
  size="large"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "red" matches the snapshot with the default props 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 43px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c0 .c1 {
  color: #255bc7;
}

.c0:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c0:active .c1 {
  color: #255bc7;
}

.c0:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:hover .c1 {
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:focus .c1 {
  color: #ffffff;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 18px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
  size="large"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "white" matches the snapshot with the default props 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 43px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-right: 15px;
}

.c0 .c1 {
  color: #255bc7;
}

.c0:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c0:active .c1 {
  color: #255bc7;
}

.c0:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:hover .c1 {
  color: #ffffff;
}

.c0:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c0:focus .c1 {
  color: #ffffff;
}

.c0:last-child {
  margin-right: 0;
}

.c0 .c1 {
  margin-left: 8px;
  margin-right: 0px;
  height: 18px;
}

.c0 .c1 svg {
  margin-top: 0;
}

<button
  className="c0"
  size="large"
>
  Foo
</button>
`;
